# quick-cmake

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  README.md  makefile
.github/workflows/: codecov.yml
benchmark/: BM_ThreadPool.cpp  CMakeLists.txt
cmake/: coverage.cmake  cpack.cmake  library.cmake  settings.cmake  tools.cmake
example/: CMakeLists.txt  demo_asio.cpp  demo_asio_client.cpp  demo_benchmark.cpp
example/aio-coro/: CMakeLists.txt  async_oper.hpp  coro_awaitable.hpp  coro_task.hpp  demo_coro_main.cpp
example/boost/: CMakeLists.txt  demo_asio_client.cpp  demo_asio_server.cpp  demo_boost_graph.cpp  demo_boost_interprocess_shm.cpp  demo_coro.cpp
example/event_manager/: CMakeLists.txt  demo_event_manager.cpp
example/google/: CMakeLists.txt  demo_benchmark.cpp  demo_gmock.cpp  demo_gtest.cpp
example/logger/: CMakeLists.txt  demo_spdlog.cpp
example/moderncpp/: CMakeLists.txt  bm_paral_algo.cpp  demo_chrono.cpp  demo_coroutine.cpp  demo_filesystem.cpp
example/opencv/: CMakeLists.txt  config.hpp  demo_opencv.cpp  demo_opencv_car.cpp  demo_opencv_coro.cpp  driver.hpp  road.hpp  vehicle.hpp
example/protobuf/: AddressBook.proto  CMakeLists.txt  demo_protobuf.cpp
example/skbench/: CMakeLists.txt  bench_threadpool.cpp
example/sktest/: CMakeLists.txt  _rm_test_sktest_stackprinter.cpp  sk_benchmark_threadpool.cpp  sk_test_argparser.cpp  sk_test_printer.cpp  sk_test_randomutils.cpp  sk_test_stringutilities.cpp  test_gtest_argparser.cpp  test_gtest_stringutils.cpp  test_gtest_threadpool.cpp  test_sktest_argparser.cpp  test_sktest_printer.cpp  test_sktest_randomutils.cpp  test_sktest_timeutils.cpp
example/sktest/containers/: CMakeLists.txt  sk_test_graph.cpp  sk_test_topkqueue.cpp  test_gtest_file.cpp  test_sktest_graph.cpp  test_sktest_topkqueue.cpp
include/: dbg.h
include/skutils/: argparser.h  config.h  debuger.h  errno.h  event_manager.h  file.h  logger.h  macro.h  net_tools.h  noncopyable.h  printer.h  process_executor.h  random.h  spinlock.h  stack_printer.h  string_utilities.h  string_utils.h  test.h  threadpool.h  time_utils.h  typeinfo.h
include/skutils/containers/: graph.h  heap.h  lc.h  skiplist.h  topk_queue.h  unionfind_set.h
include/skutils/cotainers/: graph.h  heap.h  topk_queue.h
scripts/: run_coverage_target.sh
src/: CMakeLists.txt  combine_files.cpp  ducpp.cpp  moderntools.cpp  stdtalker.cpp
test/: CMakeLists.txt  printTest.cpp
