if(Boost_FOUND)
    aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} SOURCES)
    foreach(SOURCE ${SOURCES})
        get_filename_component(TARGET ${SOURCE} NAME_WE)
        add_executable(${TARGET} ${SOURCE})
        target_include_directories(${TARGET} PRIVATE ${INCLUDE_DIR})
        target_link_libraries(${TARGET} Boost::system)
        if(${SYSTEM} STREQUAL "win")
            target_link_libraries(${TARGET} Boost::system ws2_32)
        endif()
    endforeach()
endif()
