if(benchmark_FOUND)
    add_executable(demo_benchmark demo_benchmark.cpp)
    target_link_libraries(demo_benchmark benchmark::benchmark)
endif()

if(GTest_FOUND)
    add_executable(demo_gtest demo_gtest.cpp)
    target_link_libraries(demo_gtest GTest::gtest_main)
    target_include_directories(demo_gtest PRIVATE ${INCLUDE_DIR})
endif()

if(GTest_FOUND)
    add_executable(demo_gmock demo_gmock.cpp)
    target_link_libraries(demo_gmock GTest::gtest_main GTest::gmock)
endif()
