if(benchmark_FOUND)
    file(GLOB_RECURSE BENCH_SOURCES "bench_*.cpp")
    foreach(BENCH_FILE ${BENCH_SOURCES})
        get_filename_component(BENCH_TARGET ${BENCH_FILE} NAME_WE)
        add_executable(${BENCH_TARGET} ${BENCH_FILE})
        target_include_directories(${BENCH_TARGET} PRIVATE ${INCLUDE_DIR})
        target_link_libraries(${BENCH_TARGET} benchmark::benchmark)
        string(TOUPPER ${BENCH_TARGET} CBENCH_NAME)
        add_test(NAME ${CBENCH_NAME} COMMAND ${BENCH_TARGET})
    endforeach()
endif()
